Added cron schedule

--- a/.github/workflows/build-and-deploy-container.yaml
+++ b/.github/workflows/build-and-deploy-container.yaml
@@ -3,6 +3,10 @@ on:
   push:
     branches:
       - master
+    paths:
+      - Dockerfile
+  schedule:
+    - cron:  '0 11 * * 0'
 defaults:
   run:
     shell: bash
