--- a/.github/workflows/build-and-deploy-container.yaml
+++ b/.github/workflows/build-and-deploy-container.yaml
@@ -30,4 +30,4 @@ jobs:
           tag_with_ref: true
           tag_with_sha: true
           tags: |
-            ajkayalan/docker-linux-dev-box:${{ steps.get_calver.outputs.CalVer }}
+            ${{ steps.get_calver.outputs.CalVer }}
