--- a/.github/workflows/build-and-deploy-container.yaml
+++ b/.github/workflows/build-and-deploy-container.yaml
@@ -21,13 +21,19 @@ jobs:
         run: |
           CalVer=$(date '+%Y.%m.%d')
           echo "::set-output name=CalVer::$CalVer"
-      - name: Build And Push To Dockerhub
-        uses: docker/build-push-action@v1
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Login to DockerHub
+        uses: docker/login-action@v1 
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          repository: ajkayalan/docker-linux-dev-box
-          tag_with_ref: true
-          tag_with_sha: true
+      - name: Build and Push
+        uses: docker/build-push-action@v2
+        with:
+          push: true
           tags: |
-            ${{ steps.get_calver.outputs.CalVer }}
+            ajkayalan/docker-linux-dev-box:latest
+            ajkayalan/docker-linux-dev-box:${{ steps.get_calver.outputs.CalVer }}
