--- a/.github/workflows/build-and-deploy-container.yaml
+++ b/.github/workflows/build-and-deploy-container.yaml
@@ -52,10 +52,12 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
       - name: Build Docker Image
-        run: docker build -t ghcr.io/${GITHUB_REPOSITORY}:${IMAGE_TAG} .
+        run: |
+          docker build -t ghcr.io/${GITHUB_REPOSITORY}:${IMAGE_TAG} .
+          docker build -t ghcr.io/${GITHUB_REPOSITORY}:${{ steps.get_calver.outputs.CalVer }} .
       - name: Login to GHCR
         run: docker login -u publisher -p ${{ secrets.GITHUB_TOKEN }} ghcr.io
       - name: Push Docker Image
         run: |
-          docker push ghcr.io/${GITHUB_REPOSITORY}:${IMAGE_TAG}
+          docker push ghcr.io/${GITHUB_REPOSITORY}:latest
           docker push ghcr.io/${GITHUB_REPOSITORY}:${{ steps.get_calver.outputs.CalVer }}
