--- a/.github/workflows/build-and-deploy-container.yaml
+++ b/.github/workflows/build-and-deploy-container.yaml
@@ -6,7 +6,7 @@ on:
     paths:
       - Dockerfile
   schedule:
-    - cron:  '0 11 * * 0'
+    - cron: "0 11 * * 0"
   workflow_dispatch:
 defaults:
   run:
@@ -16,31 +16,48 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
+
       - name: Get CalVer
         id: get_calver
         run: |
           CalVer=$(date '+%Y.%m.%d')
           echo "::set-output name=CalVer::$CalVer"
+
       - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
+        uses: docker/setup-qemu-action@v2
+
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v2
+
       - name: Login to DockerHub
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+
       - name: Login to GitHub Container Registry
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Build and Push
-        uses: docker/build-push-action@v2
+
+      - name: Build
+        uses: docker/build-push-action@v3
         with:
-          push: true
+          file: Dockerfile
+          push: false
+          tags: |
+            ajkayalan/docker-linux-dev-box:latest
+
+      - name: Test
+        run: docker run -v $PWD/tests:/tests ajkayalan/docker-linux-dev-box ./tests/run_integration_tests.sh
+
+      - name: Build and Push
+        uses: docker/build-push-action@v3
+        with:
+          push: ${{ github.ref == 'refs/heads/main' }}
           tags: |
             ajkayalan/docker-linux-dev-box:latest
             ajkayalan/docker-linux-dev-box:${{ steps.get_calver.outputs.CalVer }}
